cli/tests/snapshot/inputs/errors/include_multiple_other_include.ncl
# capture = 'stderr'
# command = ['eval']

let foo = {} in
{include foo, include foo}
